<resources>
    <string name="app_name">Parent App</string>
    <string name="title_activity_flip_coin">Flip Coin</string>
    <string name="title_activity_configure_children">Configure Children</string>
    <string name="title_activity_timeout_timer">Timeout Timer</string>
    <string name="remove_child">Remove Child</string>
    <string name="name">Name:</string>
    <string name="edit_child">Edit Child</string>
    <string name="enter_name_here">Enter Name Here</string>
    <string name="add_child">Add Child</string>

    <string-array name="Timer_Choices">
        <item>Choose Timer</item>
        <item>10 Minutes</item>
        <item>5 Minutes</item>
        <item>3 Minutes</item>
        <item>2 Minutes</item>
        <item>1 Minute</item>
    </string-array>
    <string name="title_activity_history_flip_view">HistoryFlipView</string>
    <string name="results_heads">Heads</string>
    <string name="results_tails">Tails</string>
    <string name="empty_time_error_text">Custom time must be non-empty!</string>
    <string name="negative_time_error">Enter a positive number of mins!</string>
    <string name="no_time_inputted_string">Choose a timer option to begin with.</string>
    <string name="pause_string">Pause</string>
    <string name="start_string">Start</string>
    <string name="children_turn_string">"'s turn to pick!"</string>
    <string name="choose_head_or_tail_str">Please choose Heads or Tails</string>
    <string name="view_history">View History</string>
    <string name="start_flip">Start Flip</string>
    <string name="choose_heads">Choose Heads</string>
    <string name="choose_tails">Choose Tails</string>
    <string name="coin_image">coin image</string>
    <string name="background_image">background_image</string>
    <string name="hour_glass">hour_glass</string>
    <string name="default_time">00:00</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="default_timer_settings">Default Timer Settings</string>
    <string name="enter_custom_time_here">Enter Custom Time Here</string>
    <string name="apply_custom_time">apply_custom_time</string>
    <string name="flip_coin">Flip Coin</string>
    <string name="timeout_timer">Timeout Timer</string>
    <string name="configure_children">Configure Children</string>
    <string name="happy_family_picture">happy_family_picture</string>
    <string name="practical_parent">Practical Parent</string>
    <string name="brown_paper_picture">brown_paper_picture</string>
    <string name="sand_picture">sand_picture</string>
    <string name="won_or_lost_picture">won_or_lost_picture</string>
    <string name="non_empty_name">Name entered must be non-empty!</string>
    <string name="brown_color">#C19A6B</string>
    <string name="yellow_brown_color">#C19A6B</string>
    <string name="picked"> Picked: "</string>
    <string name="notification_title">Timeout Timer</string>
    <string name="notification_message">Timer has finished.</string>
    <string name="dismiss_sound_action_button">Dismiss Timer Sound</string>
    <string name="time_in_hours">%d:%02d:%02d</string>
    <string name="time_in_minutes">%02d:%02d</string>
    <string name="broadcast_intent_value">Timer has finished.</string>
    <string name="choose_timer">Choose a timer option to begin with.</string>
    <string name="enter_pos_time">Enter a positive number of mins!</string>
    <string name="non_empty_time">Custom time must be non-empty!</string>
    <string name="pos_time">Enter a positive number of mins!</string>
    <string name="pick_timer">Choose a timer option to begin with.</string>
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="hyperlink"><a href="https://www.iconfinder.com/icons/4490120/clock_countdown_done_success_tick_time_watch_icon">Timer Notification</a></string>
    <string name="hyperlink2"><a href="https://www.istockphoto.com/photos/family-vertical?phrase=family%20vertical&amp;servicecontext=srp-related&amp;sort=mostpopular">Main Menu Background photo</a></string>
    <string name="hyperlink3"><a href="https://www.dreamstime.com/hourglass-sand-time-golden-light-close-up-warm-morning-sunlight-sandy-beach-starting-new-day-running-e-image108684103">Hourglass Photo</a></string>
    <string name="hyperlink4"><a href="https://www.publicdomainpictures.net/en/view-image.php?image=154620&amp;picture=floral-frame-background-4">Flip Coin Background</a></string>
    <string name="hyperlink5"><a href="https://www.pinterest.es/pin/512284526368432202/">Help Menu Background</a></string>
    <string name="hyperlink6"><a href="https://en.numista.com/catalogue/pieces1588.html">Coin</a></string>
    <string name="hyperlink7"><a href="https://www.vectorstock.com/royalty-free-vector/old-brown-paper-notebook-vector-1049105">Configure Children Background</a></string>
    <string name="hyperlink8"><a href="https://www.freepik.com/premium-photo/blank-page-old-brown-paper-beige-antique-paper-texture_10845674.htm">Flip History Background</a></string>
    <string name="hyperlink9"><a href="https://mixkit.co/free-sound-effects/bell/">Bell sound</a></string>
    <string name="hyperlink10"><a href="https://mixkit.co/free-sound-effects/bird/">Bird sound</a></string>



    <string name="configure_tasks">Configure Tasks</string>
    <string name="task_name">Task Name:</string>
    <string name="enter_task_here">Enter task here:</string>
    <string name="edit_task">Edit task</string>
    <string name="remove_task">Remove task</string>
    <string name="add_task">Add task</string>
    <string name="title_activity_help_menu">HelpMenu</string>
    <string name="help">help</string>
    <string name="resources_used">Resources used:</string>
    <string name="devlopers">This program was developed by Ajaipaul Cheema, Matthew Hamilton, Hanxi Chen, and Sameer Ali</string>
    <string name="add_photo">Add photo</string>
    <string name="editTaskHelpToast">To edit task name, enter new task above, and click this button again to confirm changes</string>
    <string name="noChildString">No child available</string>
    <string name="NextTurnString">\'s turn next!</string>
    <string name="ConfirmationStringEndTurn">\"Clicking confirm will end \"</string>
    <string name="WhichTaskString">\"\'s turn for the task \"</string>
    <string name="ChildNameString">\" and it will be \"</string>
    <string name="NextChildString">\'s turn next.</string>
    <string name="StringConfirmButton">Confirm</string>
    <string name="StringCancelButton">Cancel</string>
    <string name="title_activity_photos">PhotosActivity</string>
    <string name="take_picture_from_camera">Take picture from camera</string>
    <string name="take_picture_from_gallery">Take picture from gallery</string>
    <string name="apply_photo">Apply photo</string>
    <string name="title_activity_task_history">TaskHistoryActivity</string>
    <string name="set_speed_to_25">Set Speed to 25%</string>
    <string name="set_speed_to_50">Set Speed to 50%</string>
    <string name="set_speed_to_75">Set Speed to 75%</string>
    <string name="set_speed_to_100">Set Speed to 100%</string>
    <string name="set_speed_to_200">Set Speed to 200%</string>
    <string name="set_speed_to_300">Set Speed to 300%</string>
    <string name="set_speed_to_400">Set Speed to 400%</string>
    <string name="time">Time @</string>
    <string name="twentyFive">25%</string>
    <string name="fifty">50%</string>
    <string name="seventyFive">75%</string>
    <string name="hundred">100%</string>
    <string name="twoHundred">200%</string>
    <string name="threeHundred">300%</string>
    <string name="fourHundred">400%</string>
    <string name="begin">Begin</string>
    <string name="enter_num_of_breaths">Enter num of breaths:</string>
    <string name="apply_breaths">Apply breaths</string>
    <string name="let_s_take_n_breaths_together_choose_between_1_10_breaths">Let\'s take N breaths together. Choose between 1-10 breaths.</string>
    <string name="select_a_child_to_play">Select a child to play</string>
    <string name="background_image_of_helpScreen">background_image_of_helpScreen</string>
    <string name="breathing">Breathing</string>
    <string name="previewPicture">previewPicture</string>
    <string name="history_of_task">History of Task:</string>
    <string name="task">Task</string>
    <string name="date_here">Date Here</string>
    <string name="name_here">NAME HERE</string>
    <string name="child_pic">child pic</string>
    <string name="task_here">TASK HERE</string>
</resources>