<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <TextView
        android:id="@+id/tvTaskCompletionDate"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_weight="1"
        android:descendantFocusability="blocksDescendants"
        android:gravity="center"
        android:text="@string/date_here"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvChildNameHistoryTask"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50dp"
        android:layout_weight="1"
        android:descendantFocusability="blocksDescendants"
        android:gravity="center"
        android:text="@string/name_here"
        android:textColor="@color/black"
        android:textSize="14sp" />


    <ImageView
        android:id="@+id/childHistoryImage"
        android:layout_width="36dp"
        android:layout_height="46dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/child_pic"
        android:descendantFocusability="blocksDescendants"
        android:gravity="center"
        app:srcCompat="@drawable/happychild" />

</RelativeLayout>
