<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/btnAddChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="550dp"
        android:text="@string/add_child"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRemoveChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:text="@string/remove_child"
        app:layout_constraintBottom_toBottomOf="@+id/btnEditChild"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnEditChild" />

    <Button
        android:id="@+id/btnEditChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/edit_child"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddChild"
        app:layout_constraintEnd_toEndOf="@+id/btnRemoveChild"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnAddChild" />

    <EditText
        android:id="@+id/editChildName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="450dp"
        android:ems="10"
        android:hint="@string/enter_name_here"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="200dp"
        android:text="@string/name"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/editChildName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editChildName" />

    <ListView
        android:id="@+id/listChildren"
        android:layout_width="match_parent"
        android:layout_height="523dp"
        android:layout_marginTop="650dp"
        android:choiceMode="singleChoice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"/>

</android.support.constraint.ConstraintLayout>