<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context="ca.cmpt276.parentapp.UI.Breathing">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/breathe"
        android:layout_width="130dp"
        android:layout_height="77dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="220dp"
        android:src="@drawable/breathe_in_circle" />

    <TextView
        android:id="@+id/helpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="576dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/button_color"
        android:textSize="18sp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="135dp"
        android:layout_marginBottom="17dp"
        android:background="@color/button_color"
        android:text="@string/begin"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/guideText"
        android:layout_width="239dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="86dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="172dp"
        android:gravity="center"
        android:text="@string/let_s_take_n_breaths_together_choose_between_1_10_breaths"
        android:textColor="@color/button_color"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editBreatheNum"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="108dp"
        android:layout_marginBottom="70dp"
        android:ems="5"
        android:gravity="center"
        android:hint="@string/enter_num_of_breaths"
        android:inputType="number"
        android:textColor="@color/button_color"
        android:textColorHint="@color/button_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <Button
        android:id="@+id/applyBreathe"
        android:layout_width="143dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="133dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="116dp"
        android:background="@color/button_color"
        android:text="@string/apply_breaths" />

</RelativeLayout>